# humanoid_cop

./: CMakeLists.txt  README.md  package.xml
config/: estimation_params.yaml  estimation_params.yaml~
include/humanoid_cop/: humanoid_cop.h
launch/: humanoid_cop.launch  humanoid_cop.launch~
src/: humanoid_cop.cpp  humanoid_cop_driver.cpp
